--- a/static/pages/rassegna-stampa/releases.json
+++ b/static/pages/rassegna-stampa/releases.json
@@ -3,12 +3,12 @@
     "logo": { "path": "common", "name": "logo_epicura_2color" },
     "title": "Comunicato stampa 24 marzo 2020",
     "date": "24 marzo 2020",
-    "link": "https://contents.epicuramed.it/development/press/CS_Epicura_TELECONSULTI _20200304.pdf"
+    "link": "https://contents-staging.epicuramed.it/documents/press/CS_Epicura_TELECONSULTI _20200304.pdf"
   },
   {
     "logo": { "path": "common", "name": "logo_epicura_2color" },
     "title": "Comunicato stampa 2 aprile 2019",
     "date": "2 aprile 2019",
-    "link": "https://contents.epicuramed.it/development/press/comunicatoStampaEpicura20190405.pdf"
+    "link": "https://contents-staging.epicuramed.it/documents/press/comunicatoStampaEpicura20190405.pdf"
   }
 ]
