fix broken link releases.json

--- a/static/pages/rassegna-stampa/releases.json
+++ b/static/pages/rassegna-stampa/releases.json
@@ -33,7 +33,7 @@
     "logo": { "path": "common", "name": "logo_epicura_2color" },
     "title": "Comunicato stampa 13 gennaio 2020",
     "date": "13 gennaio 2020",
-    "link": "/press/CS_Epicura_TELECONSULTI _13Gennaio2020.pdf"
+    "link": "/press/CS_Epicura_TELECONSULTI_13Gennaio2020.pdf"
   },
   {
     "logo": { "path": "common", "name": "logo_epicura_2color" },
