--- a/static/pages/trattamenti/psicologia/disturbo-della-personalita.json
+++ b/static/pages/trattamenti/psicologia/disturbo-della-personalita.json
@@ -16,6 +16,7 @@
           "text": "Inizia il tuo percorso online"
         }
       }
-    }
+    },
+    "price_title": "Scopri i prezzi per i disturbi della personalità nella tua città"
   }
   
