--- a/static/pages/trattamenti/psicologia/disturbo-della-personalita.json
+++ b/static/pages/trattamenti/psicologia/disturbo-della-personalita.json
@@ -10,7 +10,7 @@
       "hint": "Il trattamento psicologico o psicoterapeutico si configura come una terapia particolarmente efficace per aiutare chi soffre di disturbi della personalità a riprendere in mano la propria vita, aiutando a riconoscere i propri comportamenti disadattivi e modificandoli per il proprio benessere mentale e relazionale."
     },
     "check_list": {
-      "title": "La terapia online può aiutarti in caso di disturbo:",
+      "title": "I disturbi di personalità per cui la terapia può aiutarti:",
       "footer": {
         "button": {
           "text": "Inizia il tuo percorso online"
