--- a/static/pages/rassegna-stampa/releases.json
+++ b/static/pages/rassegna-stampa/releases.json
@@ -1,48 +1,48 @@
 [
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 16 settembre 2021",
     "date": "16 settembre 2021",
     "link": "/press/EpiCura_Operazione_AUCAP_160921.pdf"
   },
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 28 ottobre 2020",
     "date": "28 ottobre 2020",
     "link": "/press/CS_Epicura_Anziani_281020.pdf"
   },
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 22 ottobre 2020",
     "date": "22 ottobre 2020",
     "link": "/press/CS_Epicura_Veterinario_ 221020.pdf"
   },
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 8 ottobre 2020",
     "date": "8 ottobre 2020",
     "link": "/press/CS_Epicura_ NUOVI_FINANZIAMENTI_08_10_2020.pdf"
   },
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 11 maggio 2020",
     "date": "11 maggio 2020",
     "link": "/press/CS_Epicura_Assistenza_anziani_e_teleconsulto_11maggio2020.pdf"
   },
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 24 marzo 2020",
     "date": "24 marzo 2020",
     "link": "/press/CS_Epicura_TELECONSULTI _20200304.pdf"
   },
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 13 gennaio 2020",
     "date": "13 gennaio 2020",
     "link": "/press/CS_Epicura_TELECONSULTI_13Gennaio2020.pdf"
   },
   {
-    "logo": { "path": "common", "name": "logo_epicura_2color" },
+    "logo": { "path": "common", "name": "logo-epicura" },
     "title": "Comunicato stampa 2 aprile 2019",
     "date": "2 aprile 2019",
     "link": "/press/CS_Epicura_20190405.pdf"
