update epiCura typography

--- a/static/pages/application.json
+++ b/static/pages/application.json
@@ -1,6 +1,6 @@
 {
-    "metaDescription": {
-        "title": "Conferma appuntamento",
-        "description": "Conferma il tuo appuntamento con EpiCura."
-    }
+  "metaDescription": {
+    "title": "Conferma appuntamento",
+    "description": "Conferma il tuo appuntamento con epiCura."
+  }
 }
