--- a/static/pages/trattamenti/psicologia/disturbo-della-personalita.json
+++ b/static/pages/trattamenti/psicologia/disturbo-della-personalita.json
@@ -12,9 +12,14 @@
     "check_list": {
       "title": "I disturbi di personalità per cui la terapia può aiutarti:",
       "footer": {
-        "button": {
-          "text": "Inizia il tuo percorso online"
-        }
+        "cta-content": [
+          {
+            "label": "Inizia il tuo percorso online",
+            "link": "https://landingpage.epicuramed.it/psicologia_form",
+            "image": "",
+            "variant": "gradient"
+          }
+        ]
       }
     },
     "price_title": "",
