fix breadcrumb medico di base

--- a/static/pages/cities/servicesMapping.json
+++ b/static/pages/cities/servicesMapping.json
@@ -25,7 +25,7 @@
   },
   "medicina-generale": {
     "fullName": "Medicina generale",
-    "specialists": "Medico generico"
+    "specialists": "Medico di base"
   },
   "massaggi": {
     "fullName": "Massoterapia",
